# ankipulator

./: README.md  pyproject.toml  requirements.txt  setup.py
ankipulator/submitter/: config.ini  main.py  utils.py
src/ankipulator/controller/: controller.py
src/ankipulator/submitter/: __init__.py  config.ini  config.toml  main.py  utils.py
